--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@pinia/nuxt": "^0.5.1",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.34",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "vite-plugin-vuetify": "^2.0.4",
-    "vuetify": "^3.7.1"
+    "vuetify": "^3.7.3"
+  
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
